fix margins on mobile, again

--- a/src/stylesheets/design/_main.scss
+++ b/src/stylesheets/design/_main.scss
@@ -3,9 +3,12 @@
   font-family: $font-main;
   font-size: rem(20);
   min-height: 100vh;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
 
   &__title {
-    margin: 0 60px 30px 60px;
+    margin: 0 60px 30px 30px;
     padding-top: 30px;
     text-transform: uppercase;
     font-size: rem(130);
@@ -22,7 +25,7 @@
     }
   }
   &__introduction {
-    margin: 0 60px 0 60px;
+    margin: 0 60px 0 30px;
     padding-bottom: 30px;
     line-height: 1.5em;
 
